# pracapublica

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: test_camara_api.ipynb  test_data_enricher.ipynb  test_network.ipynb
src/clients/: camara_client.py  data_enricher.py
src/networks/: base_network.py  frente_network.py  voting_network.py
